--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 :root{
   --primary: #efb6b2;
   --secondary: #4e4e4e;
@@ -10,19 +10,27 @@
 body{
   font-family: "Noto Serif";
   color: var(--secondary);
+  background-image: url(https://wallpaperaccess.com/full/2293065.jpg);
 }
 .App{
   max-width: 960px;
   margin: 0 auto;
 }
 .title h1{
-  color: var(--primary);
-  font-size: 1.2rem;
+  color: palevioletred;
+  font-size: 1.6rem;
   letter-spacing: 2px;
-  font-weight: normal;
+  font-weight: bolder;
+  background-color: rgba(245, 191, 231, 0.61);
+ padding: 10px;
+ border: 2px solid rgb(250, 168, 181);
+ border-radius: 1rem;
+
 }
 .title h2, .title p{
   text-align: center;
+  font-family: 'Dancing Script', cursive;
+
 }
 .title h2{
   margin-top: 60px;
@@ -43,18 +51,20 @@ label{
   display: block;
   width: 30px;
   height: 30px;
-  border: 1px solid var(--primary);
+  border: 2px solid rgb(192, 80, 99);
   border-radius: 50%;
   margin: 10px auto;
   line-height: 30px;
-  color: var(--primary);
+  color:rgb(192, 80, 99) ;
   font-weight: bold;
   font-size: 24px;
 }
 
 label:hover{
-  background: var(--primary);
-  color: white;
+  background: rgba(250, 222, 227, 0.89);
+  color: rgb(241, 94, 94);
+  transform: scale(1.02);
+  box-shadow: 3px 3px 6px #38373785;
 }
 
 .output{
@@ -68,9 +78,12 @@ label:hover{
 
 /* progress bar styles */
 .progress-bar{
-  height: 5px;
+  height: 4px;
   background: var(--primary);
-  margin-top: 20px;
+  margin-top: 30px;
+  border: 2px solid rgb(241, 94, 94);
+  border-radius: 2px;
+
 }
 
 /* image grid styles */
@@ -79,14 +92,19 @@ label:hover{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 40px;
+  
 }
 .img-wrap{
   overflow: hidden;
-  height: 0;
+  height: auto;
   padding: 50% 0;
   /* padding controls height, will always be perfectly square regardless of width */
   position: relative;
   opacity: 0.8;
+  border: 3px solid rgb(160, 86, 86);
+  border-radius: 0.5rem;
+  transform: scale(1.02);
+  box-shadow: 3px 3px 6px #38373785;
 }
 .img-wrap img{
   min-width: 100%;
@@ -105,7 +123,7 @@ label:hover{
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.5);
+  background: rgba(219, 150, 150, 0.651);
 }
 .backdrop img{
   display: block;
@@ -114,4 +132,5 @@ label:hover{
   margin: 60px auto;
   box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
   border: 3px solid white;
+  border-radius: 1rem;
 }
